--- a/.trmnlp.yml
+++ b/.trmnlp.yml
@@ -8,7 +8,8 @@ watch:
 
 # values of custom fields (defined in src/settings.yml)
 custom_fields: {
-  unifi_api_key: '{{ env.UNIFI_API_KEY }}'
+  unifi_api_key: "{{ env.UNIFI_API_KEY }}",
+  unifi_site_id: "53b5a52ae4b0b8b2dd5f6ed5"
 }
 
 # override variables
